[desktop] more deprecation fixes, NPE catches, cleanup